# real_time_graphics

./: .gitignore  Readme.md
CI/: ci-linux.sh  ci-windows-build.bat
assignment01/: Assignment01.cc  Assignment01.hh  CMakeLists.txt  CMakeLists.txt.user.21  main.cc  shaderObj.fsh  shaderObj.vsh  shaderTask.fsh  shaderTask.vsh
assignment02/: Assignment02.cc  Assignment02.hh  CMakeLists.txt  Components.hh  Entity.hh  Helper.hh  Messages.cc  Messages.hh  Player.hh  main.cc  shaderObj.fsh  shaderObj.vsh
assignment03/: Assignment03.cc  Assignment03.hh  CMakeLists.txt  Cloth.cc  Cloth.hh  main.cc  shaderObj.fsh  shaderObj.vsh
assignment04/: Assignment04.cc  Assignment04.hh  CMakeLists.txt  RigidBody.cc  RigidBody.hh  Shapes.cc  Shapes.hh  main.cc
assignment04/shader/: line.vsh  obj.fsh  obj.vsh
assignment05/: Assignment05.cc  Assignment05.hh  Block.hh  CMakeLists.txt  Chunk.cc  Chunk.hh  Material.cc  Material.hh  Vertices.hh  World.cc  World.hh  main.cc
assignment05/helper/: Noise.cc  Noise.hh
assignment05/shader/: shading.glsl
assignment05/shader/objects/: line.fsh  line.vsh  overlay.fsh  overlay.vsh
assignment05/shader/pipeline/: bg.fsh  bg.vsh  copy.fsh  copy.vsh  output.fsh
assignment05/shader/terrain/: opaque.fsh  terrain.vsh  water.fsh
assignment07/: Assignment07.cc  Assignment07.hh  Block.cc  Block.hh  CMakeLists.txt  Character.cc  Character.hh  Chunk.cc  Chunk.hh  Constants.hh  FrustumCuller.cc  FrustumCuller.hh  Material.hh  MeshGenerator.cc  MeshGenerator.hh  TerrainMesh.cc  TerrainMesh.hh  TerrainWorker.cc  TerrainWorker.hh  Vertices.hh  World.cc  World.hh  main.cc
assignment07/shader/: common.glsl  shading.glsl
assignment07/shader/objects/: light-sprite.fsh  light-sprite.vsh  line.transparent.fsh
assignment07/shader/pipeline/: fullscreen.clear.fsh  fullscreen.light.fsh  fullscreen.output.fsh  fullscreen.shadow-blur-x.fsh  fullscreen.shadow-blur-y.fsh  fullscreen.transparent-resolve.fsh  point-light.fsh  point-light.vsh
assignment07/shader/terrain/: material.glsl  terrain.depth-pre.fsh  terrain.depth-pre.vsh  terrain.glass.fsh  terrain.opaque.fsh  terrain.shadow.fsh  terrain.vsh  terrain.water.fsh
assignment07/textures/: lights-license.txt
libs/aion/src/aion/: ActionAnalyzer.cc  ActionAnalyzer.hh
libs/assimp/: CMakeLists.txt
libs/glow/: CMakeLists.txt  Changelog.md  Readme.md
libs/glow-extras/: CMakeLists.txt  Readme.md
libs/glow-extras/assimp/: CMakeLists.txt
libs/glow-extras/assimp/glow-extras/assimp/: Importer.cc  Importer.hh  MeshData.cc  MeshData.hh
libs/glow-extras/camera/: CMakeLists.txt
libs/glow-extras/camera/glow-extras/camera/: CameraBase.hh  CameraUtils.cc  CameraUtils.hh  Handle.cc  Handle.hh  Lens.cc  Lens.hh  SmoothedCamera.hh
libs/glow-extras/colors/: CMakeLists.txt
libs/glow-extras/colors/glow-extras/colors/: color.cc  color.hh  colormap.cc  colormap.hh  helper.hh  material_colors.hh
libs/glow-extras/debugging/: CMakeLists.txt
libs/glow-extras/debugging/glow-extras/debugging/: DebugOverlay.cc  DebugOverlay.hh  DebugRenderer.cc  DebugRenderer.hh  imgui-util.cc  imgui-util.hh
libs/glow-extras/debugging/shader/glow-debugging/: primitive.opaque.fsh  primitive.vsh
libs/glow-extras/docs/: Changelog.md  Pipeline Guide.md
libs/glow-extras/geometry/: CMakeLists.txt
libs/glow-extras/geometry/glow-extras/geometry/: CoordFrame.hh  Cube.hh  CubeBrush.hh  FullscreenTriangle.cc  FullscreenTriangle.hh  (+4 more)
libs/glow-extras/glfw/: CMakeLists.txt
libs/glow-extras/input/: CMakeLists.txt
libs/glow-extras/material/: CMakeLists.txt
libs/glow-extras/pipeline/: CMakeLists.txt
libs/glow-extras/shader/: CMakeLists.txt
libs/glow-extras/timing/: CMakeLists.txt
libs/glow-extras/vector/: CMakeLists.txt
libs/glow-extras/viewer/: CMakeLists.txt  Readme.md
libs/glow/cmake/: basic-setup.cmake
libs/glow/src/glow/: debug.cc  debug.hh  fwd.hh  gl.cc  glow.cc  glow.hh  objects.cc  objects.hh  std140.hh
libs/glow/src/glow/common/: array_view.hh  file_utils.hh  file_watch.cc  file_watch.hh  force_semicolon.hh  gltypeinfo.cc  gltypeinfo.hh  log.cc  log.hh  nodiscard.hh  non_copyable.hh  ogl_typeinfo.hh  optional.hh  property.hh  runtime_assert.hh  scoped_gl.hh  shader_endings.hh  shared.hh  str_utils.hh  stream_readall.hh  string_map.hh  thread_local.hh  traits.hh  utility.hh
libs/glow/src/glow/data/: SurfaceData.cc  SurfaceData.hh  TextureData.cc  TextureData.hh  TextureData.lodepng.cc  TextureData.qt.cc  TextureData.stb.cc
libs/glow/src/glow/detail/lodepng/: lodepng.cc  lodepng.hh
libs/glow/src/glow/detail/stb/: stb-impl.cc  stb_image.h  stb_image_write.h  stb_truetype.h
libs/glow/src/glow/math/: transform.cc  transform.hh
libs/glow/src/glow/objects/: ArrayBuffer.cc  ArrayBuffer.hh  ArrayBufferAttribute.hh  AtomicCounterBuffer.cc  AtomicCounterBuffer.hh  Buffer.cc  Buffer.hh  ElementArrayBuffer.cc  ElementArrayBuffer.hh  Framebuffer.cc  Framebuffer.hh  FramebufferAttachment.hh  NamedObject.cc  NamedObject.hh  OcclusionQuery.hh  PrimitiveQuery.hh  Program.Uniforms.cc  Program.cc  Program.hh  Query.cc  Query.hh  Sampler.cc  Sampler.hh  Shader.cc  Shader.hh  ShaderStorageBuffer.cc  ShaderStorageBuffer.hh  Texture.cc  Texture.hh  Texture1D.cc  Texture1D.hh  Texture1DArray.cc  Texture1DArray.hh  Texture2D.cc  Texture2D.hh  Texture2DArray.cc  Texture2DArray.hh  Texture2DMultisample.cc  Texture2DMultisample.hh  Texture2DMultisampleArray.cc  (+21 more)
libs/glow/src/glow/objects/raii/: BoundArrayBuffer.hh  BoundAtomicCounterBuffer.hh  BoundElementArrayBuffer.hh  BoundFramebuffer.hh  BoundShaderStorageBuffer.hh  BoundTransformFeedback.hh  BoundUniformBuffer.hh  BoundVertexArray.hh  UsedProgram.hh
libs/glow/src/glow/util/: AsyncTexture.cc  AsyncTexture.hh  AsyncTextureLoader.cc  AsyncTextureLoader.hh  DefaultShaderParser.cc  DefaultShaderParser.hh  LocationMapping.cc  LocationMapping.hh  ShaderParser.cc  ShaderParser.hh  TexturePool.cc  TexturePool.hh  UniformState.cc  UniformState.hh  uniform.cc  uniform.hh
libs/imgui-lean/: CMakeLists.txt  README.md
libs/imgui-lean/src/imgui/: imgui_impl_vulkan.h  imguizmo.cpp  imguizmo.h
(+231 files in other folders)
